force-app/main/default/objects/Violation_Type_Variable__c/Violation_Type_Variable__c.object-meta.xml
<CustomObject>
    <description>Contains the variables used for calculating the penalties, wages, etc due when a violation is recorded.</description>
    <label>Violation Type Variable</label>
    <nameField>
        <displayFormat>VTV{0000}</displayFormat>
        <label>Violation Type Variables Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Violation Type Variables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>