force-app/main/default/objects/Violation_Type_Variable__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This is the value that will display on the violation wizard to tell the user what should be entered as a calculation variable</description>
    <inlineHelpText>Description to be displayed on violation wizard</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>