force-app/main/default/objects/Violation_Type_Variable__c/fields/value__c.field-meta.xml
<CustomField>
    <fullName>value__c</fullName>
    <label>value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>