force-app/main/default/objects/Violation_Type_Variable__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Violation_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>